GNOME Bugzilla – Bug 681577
Missing mnemonic in "Find applications online"
Last modified: 2012-08-10 11:35:50 UTC
The following string misses a mnemonic: #: ../gtk/gtkappchooserdialog.c:188 msgid "Find applications online" See http://developer.gnome.org/gtk3/3.4/GtkButton.html#gtk-button-new-with-mnemonic
Fixed now in master.