appchooserdialog: add a missing label mnemonic

https://bugzilla.gnome.org/show_bug.cgi?id=681577